welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: too many arguments for method estSurBiscuit: ()Boolean
while(estSurBiscuit(faux))
                   ^